--- a/Douyin/View/Base.lproj/Main.storyboard
+++ b/Douyin/View/Base.lproj/Main.storyboard
@@ -141,7 +141,7 @@
                                                                     </constraints>
                                                                     <state key="normal" image="ic_video_detail_comments"/>
                                                                     <connections>
-                                                                        <segue destination="f6P-xU-1Zs" kind="presentation" modalPresentationStyle="overCurrentContext" id="dwM-bM-PS8"/>
+                                                                        <segue destination="f6P-xU-1Zs" kind="presentation" identifier="showComment" modalPresentationStyle="overCurrentContext" id="dwM-bM-PS8"/>
                                                                     </connections>
                                                                 </button>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="20d-fj-Vl4">
@@ -279,14 +279,18 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="43t-oS-7ZY">
-                                                    <rect key="frame" x="373" y="10" width="21" height="22"/>
+                                                    <rect key="frame" x="376" y="10" width="18" height="18"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="18" id="bMf-3N-j9G"/>
+                                                        <constraint firstAttribute="height" constant="18" id="jyL-1S-f6m"/>
+                                                    </constraints>
                                                     <state key="normal" image="close"/>
                                                     <connections>
                                                         <action selector="closePage:" destination="f6P-xU-1Zs" eventType="touchUpInside" id="22z-8q-FSE"/>
                                                     </connections>
                                                 </button>
                                                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="QCf-03-WsW">
-                                                    <rect key="frame" x="0.0" y="47" width="414" height="580"/>
+                                                    <rect key="frame" x="0.0" y="43" width="414" height="584"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <prototypes>
@@ -428,6 +432,11 @@
                                         </view>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <blurEffect style="light"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="15"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                     </visualEffectView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -472,7 +481,9 @@
                         </connections>
                     </view>
                     <connections>
+                        <outlet property="commentCountLabel" destination="56l-Nf-KDm" id="KEq-gm-WC4"/>
                         <outlet property="commentView" destination="7jb-9T-scW" id="fUI-fD-vxq"/>
+                        <outlet property="tableView" destination="QCf-03-WsW" id="fUl-GO-kbN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="21e-w6-GcR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
